Use persistentindexes for deleteAction.

While deleting groups the indexes got out of date. QPersistentModelIndex prevents that.

BUG:266249